--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 h1 {
   font-family: monospace;
   font-size: medium;
+  text-align: center;
 }
 h2 {
   font-family: "Courier New", Courier, monospace;
@@ -16,10 +17,15 @@ h6 {
 li {
   list-style: none;
 }
+#icon {
+  height: 200px;
+  width: 200px;
+  position: relative;
+}
 #weatherDetails {
   position: relative;
-  top: -100px;
-  left: 525px;
+  top: -155px;
+  left: 560px;
 }
 #humidity {
   color: aqua;
@@ -33,8 +39,8 @@ li {
 }
 #dayTime {
   position: relative;
-  top: -100px;
-  left: 250px;
+  top: -300px;
+  left: 275px;
   color: rgb(12, 203, 240);
 }
 #bodystyle {
@@ -76,6 +82,8 @@ li {
   text-align: center;
   position: relative;
   right: -25px;
+  top: -75px;
+  bottom: 0px;
 }
 .card {
   margin-top: 275px;
