--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,14 @@ li {
   margin: 0;
   padding: 0;
 }
+#search-input {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+#searchButton {
+  margin-left: 10px;
+  margin-top: 10px;
+}
 #icon {
   height: 200px;
   width: 200px;
