Added box-shadow around card

--- a/src/styles.css
+++ b/src/styles.css
@@ -109,7 +109,7 @@ li {
 }
 .card {
   margin-top: 275px;
-  box-shadow: rgb(12, 203, 240);
+  box-shadow: 15px 10px 10px rgb(12, 203, 240);
 }
 .days {
   font-weight: bold;
