Removed celsius functions and added imperial units

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,10 +59,7 @@ li {
   font-weight: bolder;
   color: #000000;
 }
-#celcius-link {
-  text-decoration: none;
-}
-#fahrenheit-link {
+#-link {
   text-decoration: none;
 }
 .container {
