--- a/src/styles.css
+++ b/src/styles.css
@@ -88,8 +88,11 @@ li {
   font-size: 18px;
   font-weight: normal;
 }
-.forecast {
-  right: -10px;
+.weather-forcast .col-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #button-addon2 {
   color: grey;
